# cuplan-backend

./: .gitmodules  CMakeLists.txt  Dockerfile  cd.sh
.github/workflows/: ci-cd.yml  ci-only.yml
config/: config.Development.json  config.Production.json  config.Staging.json
src/: CMakeLists.txt  main.cpp  routes.cpp  routes.h
src/authentication/controllers/: AuthenticationController.cpp  AuthenticationController.h
src/authentication/models/: LoginSuccess.h
src/core/: BitwardenSecretsManager.cpp  BitwardenSecretsManager.h  ConfigurationReader.cpp  ConfigurationReader.h  Constants.h  Empty.h  Error.h  ErrorKind.h  ISecretsManager.h  Result.h  SecretsManagerComponent.h
ssl/: fullchain.pem  privkey.pem
test/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  DummyControllerTest.cpp  DummyControllerTest.h  TestBase.cpp  TestBase.h  test_base.cpp  test_base.h
tests/authentication/controllers/: AuthenticationControllerTest.cpp  AuthenticationControllerTest.h
tests/core/: BitwardenSecretsManagerTest.cpp  ConfigurationReaderTest.cpp  ErrorTest.cpp  ResultTest.cpp  SecretsManagerComponentTest.cpp
